[package]
name = "bmw_node_config"
version = "0.0.1"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Configuration for grin, a simple, private and scalable cryptocurrency implementation based on the Mimblewimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin"
keywords = [ "crypto", "grin", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
rand = "0.6"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
toml = "0.5"
dirs = "2.0"

bmw_node_util = { path = "../util", version = "0.0.1" }
bmw_node_error = { path = "../error", version = "0.0.1" }

[dev-dependencies]
pretty_assertions = "0.6.1"
