[package]
name = "bmw_node_error"
version = "0.0.1"
authors = ["BMW Developers"]
description = "BMW NODE Errors"
license = "Apache-2.0"
repository = "https://github.com/bitcoinmw/bitcoinmw-node"
keywords = [ "crypto", "bmw", "mimblewimble" ]
exclude = ["**/*.bmw", "**/*.bmw2"]
edition = "2018"

[dependencies]
failure = "0.1"
failure_derive = "0.1"
