[package]
name = "bmw_node_p2p"
version = "0.0.1"
authors = ["BMW Developers"]
description = "BMW NODE P2P Code"
license = "Apache-2.0"
repository = "https://github.com/bitcoinmw/bitcoinmw-node"
keywords = [ "crypto", "bmw", "mimblewimble" ]
exclude = ["**/*.bmw", "**/*.bmw2"]
edition = "2018"

[dependencies]
bmw_node_error = { path = "../error", version = "0.0.1" }
