[package]
name = "bitcoinmw_node_util"
version = "0.0.1"
authors = ["BMW Developers"]
description = "BMW NODE Util Code"
license = "Apache-2.0"
repository = "https://github.com/bitcoinmw/bitcoinmw-node"
keywords = [ "crypto", "bmw", "mimblewimble" ]
exclude = ["**/*.bmw", "**/*.bmw2"]
edition = "2018"

[dependencies]
